# wasm-game-of-life

./: .gitignore  Cargo.toml  Makefile  README.md
docs/: 0.bootstrap.js  1.bootstrap.js  bootstrap.js  index.html
shaders/: compute.frag  copy.frag  display.frag  display.vert  display_monochrome.frag  dummy.vert  init.frag
src/: lib.rs  shaders.rs  universe.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
